FIX: alignment and margin in no-img-container

--- a/src/app/modules/heroes/components/hero-form/hero-form.component.scss
+++ b/src/app/modules/heroes/components/hero-form/hero-form.component.scss
@@ -50,10 +50,17 @@ img {
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
   background-color: $my-accent-color;
   opacity: .75;
 }
+
+.no-img-container p {
+  margin: 0;
+}
+
+
 
 button {
   margin: 10px 0;
